# course-scheduler

./: .gitignore  BACKLOG.md  CLAUDE.md  FEATURE-IDEAS.md  PLAN-faculty-management.md  README.md  SPEC-ci-distribution.md  SPEC-html-export.md  SPEC.md  UI-IMPROVEMENTS.md  package-lock.json  package.json  plan.md
backend/: alembic.ini  course_scheduler.spec  package-lock.json  package.json  pyproject.toml  requirements.txt  run_server.py
backend/alembic/: env.py
backend/alembic/versions/: 27f0449992b4_add_instructor_notes.py  33826a5657d5_add_instruction_type_to_sections.py  35ff0363477a_add_course_rotations.py  3a7197681912_add_app_settings_table.py  3b09ff1f9d92_initial_schema.py  68f67cd15c02_add_course_prerequisites.py  6e30d9714247_add_enrollment_records_table.py  91fb75a5b25b_add_instructor_availability_templates_.py  956c7a7a6990_add_instructor_contact_rank_fields.py  990100e80e87_add_dismissed_warnings_table.py  a06a39524b91_add_instructor_id_to_sections.py  a1b2c3d4e5f6_add_instructor_workload.py  a4914edd247d_term_types_and_section_session.py  a68c7a7ecb81_add_instructor_emergency_contact_and_.py  b0308e7208c8_drop_rotation_unique_constraint.py  baa8ff8098a3_add_section_lecture_hours_fee_notes.py  bcb08889653f_add_academic_years.py  bd35774985a2_add_summer_sessions_support.py  be74c55c7bce_split_online_modality_into_sync_and_.py  c4a7e2b1f389_rotation_modality_constraint.py  (+4 more)
backend/app/: database.py  main.py  seed.py
backend/tests/: test_availability_service.py  test_availability_templates.py  test_conflicts.py  test_ics_export.py  test_xlsx_import.py
docs/: index.html
(+211 files in other folders)
